--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a81e8">  <td>18/07/09 23:42:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser()[pri:0, instance:com.crm.qa.testcases.LoginTest@239963d8]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/09 23:43:45</td>   <td>56021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser()[pri:0, instance:com.crm.qa.testcases.LoginTest@239963d8]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/09 23:43:21</td>   <td>31542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:2, instance:com.crm.qa.testcases.LoginTest@239963d8]">loginTest</td> 
-  <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/09 23:42:13</td>   <td>-36647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginTest@239963d8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/09 23:42:50</td>   <td>1222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginTest@239963d8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1558712965</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/09 23:42:49</td>   <td>-101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.validateLoginPageTitle()[pri:1, instance:com.crm.qa.testcases.LoginTest@239963d8]">validateLoginPageTitle</td> 
-  <td>main@1558712965</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:19:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchFriends(java.lang.String)[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">searchFriends</td> 
+  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:20:38</td>   <td>42863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchFriends(java.lang.String)[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">searchFriends</td> 
+  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:21:26</td>   <td>90948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchFriends(java.lang.String)[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">searchFriends</td> 
+  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:19:08</td>   <td>-47557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:19:59</td>   <td>3476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:20:46</td>   <td>50959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:19:57</td>   <td>2159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:20:45</td>   <td>50137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/07/15 16:21:28</td>   <td>93072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@589838eb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
 </table>
