--- a/test-output/old/MavenProject/methods-alphabetical.html
+++ b/test-output/old/MavenProject/methods-alphabetical.html
@@ -1,16 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>MavenProject</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a81e8">  <td>18/07/14 12:25:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser()[pri:0, instance:com.crm.qa.testcases.LoginTest@239963d8]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-test=SeleniumProject-2@514110699</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/14 12:25:31</td>   <td>30375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser()[pri:0, instance:com.crm.qa.testcases.LoginTest@239963d8]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-test=SeleniumProject-2@514110699</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/14 12:25:11</td>   <td>10089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:2, instance:com.crm.qa.testcases.LoginTest@239963d8]">loginTest</td> 
-  <td>TestNG-test=SeleniumProject-2@514110699</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/14 12:24:26</td>   <td>-34757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginTest@239963d8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=SeleniumProject-2@514110699</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/14 12:25:01</td>   <td>943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginTest@239963d8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=SeleniumProject-2@514110699</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/07/14 12:25:00</td>   <td>-69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.validateLoginPageTitle()[pri:1, instance:com.crm.qa.testcases.LoginTest@239963d8]">validateLoginPageTitle</td> 
-  <td>TestNG-test=SeleniumProject-1@142956034</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>18/07/15 17:00:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser()[pri:0, instance:com.crm.qa.testcases.LoginTest@6500df86]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>18/07/15 17:00:32</td>   <td>22131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeBrowser()[pri:0, instance:com.crm.qa.testcases.LoginTest@6500df86]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:58:27</td>   <td>-103717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:58:59</td>   <td>-71457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:59:23</td>   <td>-47215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>18/07/15 16:59:56</td>   <td>-14782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginTest@6500df86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>18/07/15 17:00:11</td>   <td>716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginTest@6500df86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:58:58</td>   <td>-72761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:59:21</td>   <td>-48874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:59:54</td>   <td>-16095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>18/07/15 17:00:19</td>   <td>8428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginPage()[pri:2, instance:com.crm.qa.testcases.LoginTest@6500df86]">verifyLoginPage</td> 
+  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>18/07/15 17:00:10</td>   <td>-241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginPageTitle()[pri:1, instance:com.crm.qa.testcases.LoginTest@6500df86]">verifyLoginPageTitle</td> 
+  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:58:54</td>   <td>-76254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifySearchFriends(java.lang.String)[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">verifySearchFriends</td> 
+  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:59:15</td>   <td>-54954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifySearchFriends(java.lang.String)[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">verifySearchFriends</td> 
+  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/07/15 16:59:52</td>   <td>-18636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifySearchFriends(java.lang.String)[pri:0, instance:com.crm.qa.testcases.HomePageTest@402a079c]">verifySearchFriends</td> 
+  <td>main@1836797772</td>   <td></td> </tr>
 </table>
